# solar-system-view

./: main.py  pyproject.toml
app/: planetary_controller.py
